# brandpilot-os1

./: .env.example  README.md  pyproject.toml
src/brandpilot/: cli.py  config.py
src/brandpilot/api/: baserow.py
