[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brandpilot"
version = "0.1.0"
description = "BrandPilot OS"
requires-python = ">=3.11"

dependencies = [
    "typer",
    "requests",
    "python-dotenv",
    "PyYAML",
    "rich",
    "pydantic"
]

[project.scripts]
brandpilot = "brandpilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/brandpilot"]